[project]
name = "conversions_service"
version = "0.1.0"
description = ""
authors = [
    {name = "Radosław Pikul",email = "rapikul111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)"
]
