[project]
name = "conversions_service"
version = "0.1.0"
description = ""
authors = [
    {name = "Radosław Pikul",email = "rapikul111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "pytest-cov (>=1.0.0,<8.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
ruff = "^0.14.7"
black = "^25.11.0"
coverage = "^7.12.0"

